Fix layout problem in parseTree3a

--- a/AV/PL/AV/parseTree3a.css
+++ b/AV/PL/AV/parseTree3a.css
@@ -11,7 +11,6 @@ html, body {
     width: 1000px;
     margin: auto;
     height: 900px;
-    text-align: center;
     padding: 0;
 }
 
